--- a/src/layout/Home/Banner.css
+++ b/src/layout/Home/Banner.css
@@ -7,24 +7,14 @@
 
 .banner-slide {
   width: 100%;
-  height: 79vh;
+  height: 77.2vh;
   position: relative;
 }
 
 .banner-slide img {
   width: 100%;
   height: 100%;
-  object-fit: fill;
-}
-
-.banner-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.35);
-  z-index: 1;
+  object-fit: contain;
 }
 
 .banner-content {
@@ -77,7 +67,7 @@
   border: none;
   cursor: pointer;
   position: absolute;
-  bottom: 110px;
+  bottom: 60px;
   box-shadow: 0px 10px 25px rgba(0,0,0,0.28);
 }
 
@@ -91,8 +81,7 @@
 }
 
 .position-center {
-  left: 30%;
-  transform: translateX(-50%);
+  left: 19%;
 }
 
 .position-center1 {
@@ -128,11 +117,10 @@
   .position-center {
     left: 50%;
     right: auto;
-    transform: translateX(-50%);
   }
 
   .banner-button {
-    bottom: 30px;
+    bottom: 20px;
   }
 }
 
