--- a/src/layout/Home/Banner.css
+++ b/src/layout/Home/Banner.css
@@ -61,14 +61,14 @@
 .banner-button {
   padding: 18px 48px;
   width: 300px;
-  font-size: 22px; 
-  font-weight: 600;          
+  font-size: 22px;
+  font-weight: 600;
   border-radius: 14px;
   border: none;
   cursor: pointer;
   position: absolute;
   bottom: 60px;
-  box-shadow: 0px 10px 25px rgba(0,0,0,0.28);
+  box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.28);
 }
 
 .banner-button:hover {
@@ -94,7 +94,9 @@
 
 /* RESPONSIVE */
 @media (max-width: 768px) {
-  .banner-container, .banner-slide {
+
+  .banner-container,
+  .banner-slide {
     height: 60vh;
   }
 
@@ -125,7 +127,9 @@
 }
 
 @media (max-width: 480px) {
-  .banner-container, .banner-slide {
+
+  .banner-container,
+  .banner-slide {
     height: 50vh;
   }
 
